[package]
name = "status_hook"
version = "0.1.0"
authors = ["Peter <pho@buhao.cc>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"
plugin-dependencies = [
    { name = "libnro_hook.nro", url = "https://github.com/ultimate-research/nro-hook-plugin/releases/download/v0.1.1/libnro_hook.nro" }
]


[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
lazy_static = "1.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
